# kivy_demo

./: .gitignore  README.md  main.py  pong.kv  pyproject.toml
