[tool.poetry]
name = "kivy_demo"
version = "0.1.0"
description = ""
authors = ["Drew Mares <drewmmares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
